--- a/experiments.ipynb
+++ b/experiments.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 41,
    "id": "a182e156",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 42,
    "id": "ef94013a",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 43,
    "id": "3d314644",
    "metadata": {},
    "outputs": [
@@ -184,7 +184,7 @@
        "4         79084.10       0  "
       ]
      },
-     "execution_count": 39,
+     "execution_count": 43,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 44,
    "id": "c5838b21",
    "metadata": {},
    "outputs": [
@@ -205,7 +205,7 @@
        "(10000, 14)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 45,
    "id": "5ac3307d",
    "metadata": {},
    "outputs": [],
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 46,
    "id": "782a1b5f",
    "metadata": {},
    "outputs": [
@@ -355,7 +355,7 @@
        "4          1               1         79084.10       0  "
       ]
      },
-     "execution_count": 42,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -374,7 +374,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 47,
    "id": "43d212a7",
    "metadata": {},
    "outputs": [],
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 48,
    "id": "d43f1aef",
    "metadata": {},
    "outputs": [
@@ -404,7 +404,7 @@
        "\twith 10000 stored elements and shape (10000, 3)>"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 49,
    "id": "fbd9f54e",
    "metadata": {},
    "outputs": [
@@ -429,7 +429,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -440,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 50,
    "id": "8851847d",
    "metadata": {},
    "outputs": [
@@ -456,7 +456,7 @@
        "       [1., 0., 0.]], shape=(10000, 3))"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -467,7 +467,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 51,
    "id": "798812ec",
    "metadata": {},
    "outputs": [],
@@ -477,7 +477,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 52,
    "id": "3216abb6",
    "metadata": {},
    "outputs": [
@@ -596,7 +596,7 @@
        "[10000 rows x 3 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +615,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 53,
    "id": "edd3ab30",
    "metadata": {},
    "outputs": [],
@@ -625,7 +625,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 54,
    "id": "95b71506",
    "metadata": {},
    "outputs": [
@@ -779,7 +779,7 @@
        "4                0.0              1.0  "
       ]
      },
-     "execution_count": 50,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -790,7 +790,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 55,
    "id": "13e293c9",
    "metadata": {},
    "outputs": [],
@@ -800,7 +800,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 56,
    "id": "953165b1",
    "metadata": {},
    "outputs": [
@@ -948,7 +948,7 @@
        "4                0.0              1.0  "
       ]
      },
-     "execution_count": 52,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -959,7 +959,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 57,
    "id": "1f7da247",
    "metadata": {},
    "outputs": [
@@ -969,7 +969,7 @@
        "array(['Female', 'Male'], dtype=object)"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 58,
    "id": "9001a822",
    "metadata": {},
    "outputs": [],
@@ -1011,7 +1011,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 59,
    "id": "0b2f825c",
    "metadata": {},
    "outputs": [],
@@ -1028,7 +1028,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 60,
    "id": "95c25072",
    "metadata": {},
    "outputs": [
@@ -1038,7 +1038,7 @@
        "((7000, 12), (3000, 12))"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 60,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1057,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 61,
    "id": "8a812fca",
    "metadata": {},
    "outputs": [],
@@ -1076,7 +1076,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 62,
    "id": "8d33b263",
    "metadata": {},
    "outputs": [],
@@ -1090,7 +1090,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 63,
    "id": "b7cf3412",
    "metadata": {},
    "outputs": [],
@@ -1104,7 +1104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 64,
    "id": "7d49adb8",
    "metadata": {},
    "outputs": [
@@ -1204,7 +1204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 65,
    "id": "e6d11059",
    "metadata": {},
    "outputs": [],
@@ -1215,7 +1215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 66,
    "id": "6709d65b",
    "metadata": {},
    "outputs": [],
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 67,
    "id": "5f37e9f6",
    "metadata": {},
    "outputs": [],
@@ -1252,7 +1252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 68,
    "id": "529577a2",
    "metadata": {},
    "outputs": [],
@@ -1270,7 +1270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 69,
    "id": "9f08232e",
    "metadata": {},
    "outputs": [
@@ -1279,33 +1279,41 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/100\n",
-      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m2s\u001b[0m 4ms/step - accuracy: 0.8246 - loss: 0.4159 - val_accuracy: 0.8563 - val_loss: 0.3551\n",
+      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 2ms/step - accuracy: 0.8294 - loss: 0.4102 - val_accuracy: 0.8533 - val_loss: 0.3572\n",
       "Epoch 2/100\n",
-      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.8543 - loss: 0.3581 - val_accuracy: 0.8603 - val_loss: 0.3586\n",
+      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.8517 - loss: 0.3604 - val_accuracy: 0.8607 - val_loss: 0.3497\n",
       "Epoch 3/100\n",
-      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.8554 - loss: 0.3501 - val_accuracy: 0.8617 - val_loss: 0.3372\n",
+      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.8576 - loss: 0.3497 - val_accuracy: 0.8663 - val_loss: 0.3375\n",
       "Epoch 4/100\n",
-      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.8566 - loss: 0.3468 - val_accuracy: 0.8650 - val_loss: 0.3339\n",
+      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.8567 - loss: 0.3487 - val_accuracy: 0.8660 - val_loss: 0.3430\n",
       "Epoch 5/100\n",
-      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.8589 - loss: 0.3433 - val_accuracy: 0.8643 - val_loss: 0.3356\n",
+      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.8563 - loss: 0.3470 - val_accuracy: 0.8627 - val_loss: 0.3359\n",
       "Epoch 6/100\n",
-      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.8623 - loss: 0.3398 - val_accuracy: 0.8610 - val_loss: 0.3378\n",
+      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.8586 - loss: 0.3416 - val_accuracy: 0.8640 - val_loss: 0.3340\n",
       "Epoch 7/100\n",
-      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.8639 - loss: 0.3369 - val_accuracy: 0.8650 - val_loss: 0.3353\n",
+      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.8576 - loss: 0.3395 - val_accuracy: 0.8697 - val_loss: 0.3311\n",
       "Epoch 8/100\n",
-      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.8620 - loss: 0.3340 - val_accuracy: 0.8640 - val_loss: 0.3424\n",
+      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.8604 - loss: 0.3371 - val_accuracy: 0.8697 - val_loss: 0.3291\n",
       "Epoch 9/100\n",
-      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.8637 - loss: 0.3331 - val_accuracy: 0.8627 - val_loss: 0.3363\n",
+      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.8627 - loss: 0.3335 - val_accuracy: 0.8667 - val_loss: 0.3331\n",
       "Epoch 10/100\n",
-      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.8660 - loss: 0.3298 - val_accuracy: 0.8637 - val_loss: 0.3373\n",
+      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.8613 - loss: 0.3338 - val_accuracy: 0.8673 - val_loss: 0.3325\n",
       "Epoch 11/100\n",
-      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.8660 - loss: 0.3274 - val_accuracy: 0.8637 - val_loss: 0.3368\n",
+      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.8606 - loss: 0.3294 - val_accuracy: 0.8630 - val_loss: 0.3440\n",
       "Epoch 12/100\n",
-      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.8637 - loss: 0.3261 - val_accuracy: 0.8627 - val_loss: 0.3441\n",
+      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.8616 - loss: 0.3288 - val_accuracy: 0.8630 - val_loss: 0.3438\n",
       "Epoch 13/100\n",
-      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.8649 - loss: 0.3228 - val_accuracy: 0.8577 - val_loss: 0.3464\n",
+      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.8616 - loss: 0.3290 - val_accuracy: 0.8643 - val_loss: 0.3351\n",
       "Epoch 14/100\n",
-      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m1s\u001b[0m 3ms/step - accuracy: 0.8654 - loss: 0.3195 - val_accuracy: 0.8650 - val_loss: 0.3453\n"
+      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.8637 - loss: 0.3229 - val_accuracy: 0.8617 - val_loss: 0.3360\n",
+      "Epoch 15/100\n",
+      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.8651 - loss: 0.3218 - val_accuracy: 0.8623 - val_loss: 0.3446\n",
+      "Epoch 16/100\n",
+      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.8650 - loss: 0.3209 - val_accuracy: 0.8597 - val_loss: 0.3400\n",
+      "Epoch 17/100\n",
+      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.8657 - loss: 0.3186 - val_accuracy: 0.8673 - val_loss: 0.3388\n",
+      "Epoch 18/100\n",
+      "\u001b[1m219/219\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m0s\u001b[0m 2ms/step - accuracy: 0.8650 - loss: 0.3178 - val_accuracy: 0.8610 - val_loss: 0.3476\n"
      ]
     }
    ],
@@ -1319,7 +1327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 70,
    "id": "487317b3",
    "metadata": {},
    "outputs": [
@@ -1345,7 +1353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 71,
    "id": "cc2a572f",
    "metadata": {},
    "outputs": [
@@ -1364,14 +1372,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 72,
    "id": "f7723fdd",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 13724), started 0:08:24 ago. (Use '!kill 13724' to kill it.)"
+       "Reusing TensorBoard on port 6007 (pid 19776), started 0:03:48 ago. (Use '!kill 19776' to kill it.)"
       ]
      },
      "metadata": {},
@@ -1381,13 +1389,13 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-72061d518aba71f1\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-ee09ab1ab9d48bff\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-72061d518aba71f1\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-ee09ab1ab9d48bff\");\n",
        "          const url = new URL(\"http://localhost\");\n",
-       "          const port = 6006;\n",
+       "          const port = 6007;\n",
        "          if (port) {\n",
        "            url.port = port;\n",
        "          }\n",
@@ -1405,13 +1413,13 @@
     }
    ],
    "source": [
-    "%tensorboard --logdir logs/fit"
+    "%tensorboard --logdir logs/fit --port 6007\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0dd01421",
+   "id": "73fec553",
    "metadata": {},
    "outputs": [],
    "source": []
